@@ -1,3 +1,8 @@
+2013-03-27  Pedro Alves  <palves@redhat.com>
+
+	* coff-pe-read.c (_initialize_coff_pe_read): Make the command
+	zuinteger instead of uinteger.
+
 2013-03-26  Markus Metzger  <markus.t.metzger@intel.com>
 
 	* record-btrace.c (record_btrace_close): Call
